test/binaryOperators4.slq
// args: --run

def main(){
	b:=0:𝔹;
	s:=1:int[16];
	u:=2:uint[16];
	bc:=0:!𝔹;
	n:=3:!ℕ;
	z:=-3:!ℤ;
	q:=1/2:!ℚ;
	r:=4.5:!ℝ;
	// c:=0:!ℂ;
	
	abb:=b*b:𝔹;
	abs:=b*s:int[16];
	abu:=b*u:uint[16];
	abbc:=b*bc:𝔹;
	abn:=b*n; // error
	abz:=b*z; // error
	abq:=b*q; // error
	abr:=b*r; // error
	asb:=s*b:int[16];
	ass:=s*s:int[16];
	asu:=s*u; // error
	asbc:=s*bc:int[16];
	asn:=s*n; // error
	asn₂:=s*1:int[16];
	asz:=s*z; // error
	asz₂:=s*-1:int[16];
	asq:=s*q;// error
	asr:=s*r; // error
	aub:=u*b:uint[16];
	aus:=u*s; // error
	auu:=u*u:uint[16];
	aubc:=u*bc:uint[16];
	aun:=u*n; // error
	aun₂:=u*1:uint[16];
	auz:=u*z; // error
	auz₂:=u*-1:uint[16]; // error
	auz₃:=u*2:uint[16];
	auq:=u*q;// error
	aur:=u*r; // error	
	abcb:=bc*b;
	abcs:=bc*s:int[16];
	abcu:=bc*u:uint[16];
	abcbc:=bc*bc:!𝔹;
	abcn:=bc*n:!ℕ;
	abcz:=bc*z:!ℤ;
	abcq:=bc*q:!ℚ;
	abcr:=bc*r:!ℝ;
	anb:=n*b; // error
	ans:=n*s; // error
	ans₂:=1*s;
	anu:=n*u; // error
	anu₂:=1*u;
	anbc:=n*bc:!ℕ;
	ann:=n*n:!ℕ;
	anz:=n*z:!ℤ;
	anq:=n*q:!ℚ;
	anr:=n*r:!ℝ;
	azb:=z*b; // error
	azs:=z*s; // error
	azs₂:=-1*s:int[16];
	azu:=z*u; // error
	azu₂:=-1*u:uint[16]; // error
	azu₃:=2*u:uint[16];
	azbc:=z*bc:!ℤ;
	azn:=z*n:!ℤ;
	azz:=z*z:!ℤ;
	azq:=z*q:!ℚ;
	azr:=z*r:!ℝ;
	aqb:=q*b; // error
	aqs:=q*s; // error
	aqu:=q*u; // error
	aqbc:=q*bc:!ℚ;
	aqn:=q*n:!ℚ;
	aqz:=q*z:!ℚ;
	aqq:=q*q:!ℚ;
	aqr:=q*r:!ℝ;
	arb:=r*b; // error
	ars:=r*s; // error
	aru:=r*u; // error
	arbc:=r*bc:!ℝ;
	arn:=r*n:!ℝ;
	arz:=r*z:!ℝ;
	arq:=r*q:!ℝ;
	arr:=r*r:!ℝ;
	
	sbb:=b/b; // error
	sbs:=b/s; // error
	sbu:=b/u; // error
	sbbc:=b/bc; // error
	sbn:=b/n; // error
	sbz:=b/z; // error
	sbq:=b/q; // error
	sbr:=b/r; // error
	ssb:=s/b:int[16]; // error
	sss:=s/s:int[16]; // error
	ssu:=s/u; // error
	ssbc:=s/bc:int[16]; // error
	ssn:=s/n; // error
	ssn₂:=s/1:int[16]; // error
	ssz:=s/z; // error
	ssz₂:=s/-1:int[16]; // error
	ssq:=s/q;// error
	ssr:=s/r; // error
	sub:=u/b:uint[16]; // error
	sus:=u/s; // error
	suu:=u/u:uint[16]; // error
	sun:=u/n; // error
	sun₂:=u/1:uint[16]; // error
	suz:=u/z; // error
	suz₂:=u / -1:uint[16]; // error
	suq:=u/q;// error
	sur:=u/r; // error	
	sbcb:=bc/b; // error
	sbcs:=bc/s; // error
	sbcu:=bc/u; // error
	sbcbc:=bc/bc:!ℚ;
	sbcn:=bc/n:!ℚ;
	sbcz:=bc/z:!ℚ;
	sbcq:=bc/q:!ℚ;
	sbcr:=bc/r:!ℝ;
	snb:=n/b; // error
	sns:=n/s; // error
	sns₂:=1/s; // error
	snu:=n/u; // error
	snu₂:=1/u; // error
	snbc:=n/bc:!ℚ;
	snn:=n/n:!ℚ;
	snz:=n/z:!ℚ;
	snq:=n/q:!ℚ;
	snr:=n/r:!ℝ;
	szb:=z/b; // error
	szs:=z/s; // error
	szs₂:=-1/s:int[16]; // error
	szu:=z/u; // error
	szu₂:=-1/u:uint[16]; // error
	szbc:=z/bc:!ℚ;
	szn:=z/n:!ℚ;
	szz:=z/z:!ℚ;
	szq:=z/q:!ℚ;
	szr:=z/r:!ℝ;
	sqb:=q/b; // error
	sqs:=q/s; // error
	squ:=q/u; // error
	sqbc:=q/bc:!ℚ;
	sqn:=q/n:!ℚ;
	sqz:=q/z:!ℚ;
	sqq:=q/q:!ℚ;
	sqr:=q/r:!ℝ;
	srb:=r/b; // error
	srs:=r/s; // error
	sru:=r/u; // error
	srbc:=r/bc:!ℝ;
	srn:=r/n:!ℝ;
	srz:=r/z:!ℝ;
	srq:=r/q:!ℝ;
	srr:=r/r:!ℝ;

	nsbb:=b div b:𝔹;
	nsbs:=b div s:int[16];
	nsbu:=b div u:uint[16];
	nsbbc:=b div bc:𝔹;
	nsbn:=b div n:𝔹; // error
	nsbz:=b div z; // error
	nsbq:=b div q; // error
	nsbr:=b div r; // error
	nssb:=s div b:int[16];
	nsss:=s div s:int[16];
	nssu:=s div u; // error
	nssbc:=s div bc:int[16];
	nssn:=s div n:int[16];
	nssn₂:=s div 1:int[16];
	nssn₃:=s div 2:int[16];
	nssz:=s div z:int[16]; // error
	nssz₂:=s div -1:int[16];
	nssq:=s div q;// error
	nssr:=s div r; // error
	nsub:=u div b:uint[16];
	nsus:=u div s; // error
	nsuu:=u div u:uint[16];
	nsubc:=u div bc:uint[16];
	nsun:=u div n;
	nsun₂:=u div 1:uint[16];
	nsuz:=u div z; // error
	nsuz₂:=u div -1:uint[16]; // error
	nsuz₃:=u div 2:uint[16];
	nsuq:=u div q;// error
	nsur:=u div r; // error	
	nsbcb:=bc div b:𝔹;
	nsbcs:=bc div s:int[16];
	nsbcu:=bc div u:uint[16];
	nsbcbc:=bc div bc:!𝔹;
	nsmall:=0:!ℕ;
	nsbcn:=bc div nsmall:!ℕ;
	nsbcz:=bc div z:!ℤ;
	nsbcq:=bc div q:!ℤ;
	nsbcr:=bc div r:!ℤ;
	nsnb:=n div b; // error
	nsns:=n div s; // error
	nsns₂:=1 div s;
	nsnu:=n div u; // error
	nsnu₂:=10 div u;
	nsnbc:=n div bc:!ℕ;
	nsnn:=n div n:!ℕ;
	nsnz:=n div z:!ℤ;
	nsnq:=n div q:!ℤ;
	nsnr:=n div r:!ℤ;
	nszb:=z div b; // error
	nszs:=z div s; // error
	nszs₂:=-1 div s;
	nszu:=z div u; // error
	nszu₂:=-(-10) div u; // error
	zlarge:=-(-10);
	nszbc:=zlarge div bc:!ℤ;
	nszn:=zlarge div n:!ℤ;
	nszz:=zlarge div z:!ℤ;
	nszq:=z div q:!ℤ;
	nszr:=z div r:!ℤ;
	nsqb:=q div b; // error
	nsqs:=q div s; // error
	nsqu:=q div u; // error
	nsqbc:=q div bc:!ℤ;
	nsqn:=q div n:!ℤ;
	nsqz:=q div z:!ℤ;
	nsqq:=q div q:!ℤ;
	nsqr:=q div r:!ℤ;
	nsrb:=r div b; // error
	nsrs:=r div s; // error
	nsru:=r div u; // error
	nsrbc:=r div bc:!ℤ;
	nsrn:=r div n:!ℤ;
	nsrz:=r div z:!ℤ;
	nsrq:=r div q:!ℤ;
	nsrr:=r div r:!ℤ;
}
